--- a/index.html
+++ b/index.html
@@ -28,16 +28,7 @@
         const envelope = document.querySelector('.envelope-wrapper');
         envelope.addEventListener('click', () => {
             envelope.classList.toggle('flap');
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart Drop Animation</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <input type="checkbox" id="heartCheckbox">
-    <label for="heartCheckbox" id="dropButton">Drop Hearts</label>
-    <div class="container">
-        <div class="heart"></div>
-    </div>
+        });
+    </script>
 </body>
 </html>
