--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong>To the person who brightened up my life,</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                            Thank you for being such an amazing company for the past few months. 
+                            Thank you for bringing back the spark i thought i didnt have at all. 
+                            Thank you for being present for me. Words will never be enough to express 
+                            what you mean to me and how important you ve become to me but MEOW. 
+                            your MEOW
+                
                         </p>
                     </div>
                 </div>
